feat: use virtual threads for chunk tasks